Commented out unnecessary entries, updated SotM and About Me

--- a/l10n/english/projects/morel_en.json
+++ b/l10n/english/projects/morel_en.json
@@ -39,8 +39,8 @@
         "description1": "Our game not only won the '<b>Best Visuals</b>' and '<b>Best Soundtrack</b>' awards at the Game/Music Jam 2022, but also received high praise at the 2023 RIT Student Game Showcase and Expo. Players and reviewers enjoyed the novel mechanics and distinctive visual style of the game."
       },
       "future": {
-        "title": "Future Plans",
-        "description1": "Although current plans are nebulous, the team has expressed interest in further developing the game. We look forward to the potential opportunity to expand upon our initial concept and continue our journey with Sword of the Morel."
+        "title": "Future Development",
+        "description1": "Sword of the Morel has been granted $10,000 dollars in seed money from the <a href='https://www.rit.edu/simonecenter/magic-maker-program' target='_blank'>RIT Magic Maker Program</a> to further develop the game over the course of the 2023 Fall Semester! I plan to work further on art, as well as VFX and shaders to make the game a visual masterpiece."
       }
     }
   }
