--- a/l10n/japanese/projects/morel_ja.json
+++ b/l10n/japanese/projects/morel_ja.json
@@ -39,8 +39,8 @@
       "description1": "我々のゲームは、ゲーム/音楽ジャム2022で'<b>最優秀ビジュアル賞</b>'と'<b>最優秀サウンドトラック賞</b>'を受賞するだけでなく、2023年のRIT学生ゲームショーケースとエキスポでも高く評価されました。プレイヤーやレビュワーは、新しいメカニクスと独特のビジュアルスタイルを楽しんでいました。"
     },
     "future": {
-      "title": "将来の計画",
-      "description1": "現在の計画はあいまいですが、チームはゲームの更なる開発に興味を示しています。我々は初期のコンセプトを発展させ、ソード・オブ・ザ・モレルとともに旅を続けることを楽しみにしています。"
+      "title": "将来の開発",
+      "description1": "「ソード・オブ・ザ・モレル」は、2023年の秋学期にゲームをさらに開発するために、<a href='https://www.rit.edu/simonecenter/magic-maker-program' target='_blank'>RIT Magic Maker Program</a>から10,000ドルの補助金を授与されました！アートにさらに取り組むとともに、VFXやシェーダーを使ってゲームを視覚的な傑作にする予定です。"
     }
   }
 }
