Updated SotM to MKBGS

--- a/l10n/english/portfolio_en.json
+++ b/l10n/english/portfolio_en.json
@@ -63,17 +63,17 @@
                 "linkText": " here"
             },
             "swordOfTheMorel": {
-                "title": "Sword of the Morel",
+                "title": "Mushroom Kid's Big Grass Sword (Sword of the Morel)",
                 "summaryTitle": "Summary",
                 "summaryIntro": "A submission for the ",
                 "summaryEvent": "2022 Game/Music Jam",
-                "summaryText": ", Sword of the Morel is a 2D platformer based on the theme of growth featuring a sword that grows the more enemies defeated.",
+                "summaryText": ", a 2D platformer featuring a sword that grows the more enemies defeated. The project has been funded <span class='keyword other'>$10,000</span> by the RIT Magic Maker Programming and is currently being produced into a full game using Godot over the current semester.",
                 "roleTitle": "Role",
-                "roleIntro": "Worked in a group of 5 as a ",
-                "rolePosition": "Background and Asset Artist",
-                "roleResponsibility1": "Created numerous large-scale pixel art sprites that added aesthetic value and enhanced gameplay experience.",
-                "roleResponsibility2": "Accumulated over 60 hours in Aseprite mastering the tool and enhancing the game visuals.",
-                "roleResponsibility3": "Contributed significantly to winning the ",
+                "roleIntro": "",
+                "rolePosition": "Environment, VFX, and Tech Artist",
+                "roleResponsibility1": "Currently, I am working on background art, as well as shaders and procedural VFX. (Samples on project page)",
+                "roleResponsibility2": "Contributed significantly to winning the",
+                "roleResponsibility3": "",
                 "roleAchievement": "Best Visuals",
                 "roleEnd": " award in the competition.",
                 "linkIntro": "Play the game:",
