--- a/l10n/japanese/portfolio_ja.json
+++ b/l10n/japanese/portfolio_ja.json
@@ -63,16 +63,16 @@
                 "linkText": "こちら"
             },
             "swordOfTheMorel": {
-                "title": "ソード・オブ・ザ・モレル",
+                "title": "キノコの子のくそデカ草剣（ｿｰﾄﾞ･ｵﾌﾞ･ｻﾞ･ﾓﾚﾙ）",
                 "summaryTitle": "概要",
                 "summaryIntro": "「",
                 "summaryEvent": "2022年ゲーム/音楽ジャム",
-                "summaryText": "」の参加作品である、成長をテーマにした敵を倒すごとに成長する剣を持つ2Dプラットフォーマーです。",
+                "summaryText": "」の参加作品である、敵を倒すごとに成長する剣を持つ2Dプラットフォーマーです。現在、RITのMagic Maker Programから<span class='keyword other'>１万ドル</span>の資金提供を受け、今学期中にGodotを使って完全なゲームに仕上げようとしています。",
                 "roleTitle": "役割",
-                "roleIntro": "5人のグループでの",
-                "rolePosition": "背景・アセットアーティスト",
-                "roleResponsibility1": "美的価値を高め、ゲーム体験を向上させる大規模なピクセルアート・スプライトを多数制作。",
-                "roleResponsibility2": "Asepriteで60時間以上かけてツールをマスターし、ゲームのビジュアルを向上させた。",
+                "roleIntro": "",
+                "rolePosition": "背景・VFX・テクニカルアート",
+                "roleResponsibility1": "背景のほか、シェーダーやプロシージャルVFXにも取り組んでいる。(プロジェクトページにサンプルあり）",
+                "roleResponsibility2": "",
                 "roleResponsibility3": "",
                 "roleAchievement": "最優秀ビジュアル賞",
                 "roleEnd": "受賞に大きく貢献。",
