--- a/l10n/japanese/projects/morel_ja.json
+++ b/l10n/japanese/projects/morel_ja.json
@@ -12,23 +12,23 @@
   },
   "main": {
     "introduction": {
-      "title": "ソード・オブ・ザ・モレル - 2022ゲーム/音楽ジャムのプロジェクト",
-      "description": "モレルの剣は、「成長」をテーマにした魅力的な2Dプラットフォーマーです。プレイヤーはキノコの少年、マイカとなり、敵を倒すごとに長くなる剣を使って、自分の村を取り戻すための旅に出ます。このプロジェクトは、2022ゲーム/音楽ジャムで「ベストビジュアル」賞を受賞しました。",
-      "link": "<a href='https://fumpledump.itch.io/sword-of-the-morel' target='_blank'>itch.io</a>でゲームをお楽しみいただけます"
+      "title": "キノコの子のくそデカ草剣 (旧：ソード・オブ・ザ・モレル)",
+      "description": "「成長」をテーマにした魅力的な2Dプラットフォーマーです。プレイヤーはキノコの少年、マイカとなり、敵を倒すごとに長くなる剣を使って、自分の村を取り戻すための旅に出ます。このプロジェクトは、2022ゲーム/音楽ジャムで「ベストビジュアル」賞を受賞して、RITから1万ドルの奨学金を授与され、2023年秋学期にさらなる開発を行う予定です。",
+      "link": "<a href='https://fumpledump.itch.io/sword-of-the-morel' target='_blank'>itch.io</a>でジャム版のゲームをお楽しみいただけます"
     },
     "role": {
       "title": "役割と貢献",
-      "description1": "<b>背景とアセットアーティスト</b>として、大規模なピクセルアートのスプライトを多数作成し、ゲームの美学とゲームプレイ体験に大きく貢献しました。Asepriteで60時間以上を費やすことで、ゲームのビジュアルを向上させ、このピクセルアートツールの使い方をマスターしました。"
+      "description1": "<b>背景とアセットアーティスト</b>として、大規模なピクセルアートのスプライトを多数作成し、ゲームの美学とゲームプレイ体験に大きく貢献しました。Asepriteで60時間以上を費やすことで、ゲームのビジュアルを向上させ、このピクセルアートツールの使い方をマスターしました。<br><br>現在、ゲームは本格的な制作段階に入り、私は<b>環境アーティスト、VFXアーティスト、テクニカルアーティスト</b>の役割を担っています。ゲームに古風で家庭的な雰囲気を与えることを目指し、Godotのシェーダーとパーティクルエンジンを使って、2Dゲームのシェーダーの世界で大活躍しています。"
     },
     "assets": {
       "title": "アセットの作成",
       "description1": "ゲームのビジュアルスタイルは、私が使用したピクセルスタイルとカラーパレットに大いに影響を受けました。様々なタイプのキノコを参考にし、自然主義的な美学を取り入れることで、ゲームの魅力と雰囲気を高めるアセットを作成しました。"
     },
     "trailer": {
-      "caption": "<a href='https://johndevelopment.com/'>ジョン・ヘイリー</a>によって制作されたゲームのトレーラー"
+      "caption": "<a href='https://johndevelopment.com/'>ジョン・ヘイリー</a>によって制作されたゲームのジャム版予告編"
     },
     "visualization": {
-      "title": "サンプル"
+      "title": "ジャム版サンプル"
     },
     "challenges": {
       "title": "課題と解決策",
@@ -40,7 +40,10 @@
     },
     "future": {
       "title": "将来の開発",
-      "description1": "「ソード・オブ・ザ・モレル」は、2023年の秋学期にゲームをさらに開発するために、<a href='https://www.rit.edu/simonecenter/magic-maker-program' target='_blank'>RIT Magic Maker Program</a>から10,000ドルの補助金を授与されました！アートにさらに取り組むとともに、VFXやシェーダーを使ってゲームを視覚的な傑作にする予定です。"
+      "description1": "2023年の秋学期にゲームをさらに開発するために、<a href='https://www.rit.edu/simonecenter/magic-maker-program' target='_blank'>RIT Magic Maker Program</a>から10,000ドルの補助金を授与されました！"
+    },
+    "visualization2": {
+      "title": "開発中版サンプル"
     }
   }
 }
